# whisper-telegram-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-30-whisper-telegram-mcp.md
src/whisper_telegram_mcp/: __init__.py  __main__.py  config.py  server.py  telegram.py  transcribe.py  tts.py
tests/: conftest.py  test_config.py  test_server.py  test_telegram.py  test_transcribe.py  test_tts.py
