[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-telegram-mcp"
version = "0.1.0"
description = "MCP server for transcribing Telegram voice messages using Whisper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "whisper", "telegram", "transcription", "voice", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
whisper-telegram-mcp = "whisper_telegram_mcp.server:main"

[project.urls]
Homepage = "https://github.com/abid-mahdi/whisper-telegram-mcp"
Repository = "https://github.com/abid-mahdi/whisper-telegram-mcp"
Issues = "https://github.com/abid-mahdi/whisper-telegram-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_telegram_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/whisper_telegram_mcp --cov-report=term-missing"
markers = [
    "integration: requires Whisper model download (~150MB, slow)",
]

[tool.coverage.run]
source = ["src/whisper_telegram_mcp"]
