[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-telegram-mcp"
version = "0.1.0"
description = "MCP server for transcribing Telegram voice messages using Whisper, with Kokoro/OpenAI TTS voice replies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abid Mahdi", email = "abid@abidmahdi.com" }]
keywords = ["mcp", "whisper", "telegram", "transcription", "voice", "tts", "claude", "kokoro", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Natural Language :: English",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
local = [
    "faster-whisper>=1.0.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
]
dev = [
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
whisper-telegram-mcp = "whisper_telegram_mcp.server:main"

[project.urls]
Homepage = "https://github.com/abid-mahdi/whisper-telegram-mcp"
Repository = "https://github.com/abid-mahdi/whisper-telegram-mcp"
Issues = "https://github.com/abid-mahdi/whisper-telegram-mcp/issues"
Changelog = "https://github.com/abid-mahdi/whisper-telegram-mcp/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_telegram_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/whisper_telegram_mcp --cov-report=term-missing"
markers = [
    "integration: requires Whisper model download (~150MB, slow)",
]

[tool.coverage.run]
source = ["src/whisper_telegram_mcp"]
